# AI-FinOps

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AI-FinOps-SDD-Chapter-3-Components-Domain-Contracts.md  AI-FinOps-SDD-Chapter-3-Part-2-Components-Domain-Contracts.md  AI-FinOps-SDD-Chapter-4-Part-2-Standards-Catalogs-Dictionary.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  STARTUP.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/alerts/: __init__.py  conditions.py  dedup.py  dispatcher.py  metrics.py  preferences.py  rule_engine.py  suppression.py
backend/app/analytics/: __init__.py  aggregation.py  service.py
backend/app/api/: deps.py  router.py
backend/app/auth/: __init__.py  api_key_auth.py  audit.py  cookies.py  dependencies.py  exceptions.py  google_oauth.py  password.py  rate_limit.py  rbac.py  service.py  slug.py  tokens.py
backend/app/budgets/: __init__.py  period.py  service.py
backend/app/config/: settings.py
backend/app/core/: container.py  database.py  logging.py  redis.py  validators.py
backend/app/dashboard/: service.py
backend/app/db/: README.md  __init__.py  base.py  dependencies.py  engine.py  init_db.py  mixins.py  seed.py  session.py
backend/app/dbtools/: __init__.py  ddl_parser.py  diff.py  expected_schema.py  live_schema.py  models.py  recommend.py  report.py
backend/app/email/: __init__.py  provider.py  renderer.py  resend_provider.py  service.py  webhook.py
backend/app/http/: __init__.py  auth.py  client.py  retry.py  telemetry.py  transport.py
backend/app/middleware/: request_logging.py  security_headers.py
backend/app/models/: __init__.py  alert.py  base.py  budget.py  daily_cost_summary.py  email_delivery_event.py  invitation.py  membership.py  model_pricing.py  organization.py  organization_api_key.py  password_reset_token.py  playground_execution.py  project.py  provider_connection.py  provider_usage_summary.py  session.py  usage_collection_checkpoint.py  usage_collection_run.py  usage_cost_record.py  usage_event.py  usage_record.py  user.py  verification_token.py
backend/app/organizations/: audit.py
backend/app/pricing/: __init__.py  engine.py  validator.py
backend/app/providers/: __init__.py  capabilities.py  config.py  credential.py  errors.py  factory.py  health.py  info.py  interface.py  models.py  registry.py  retry.py  validation.py
backend/app/realtime/: __init__.py  auth.py  connection_manager.py  event_bus.py  events.py  metrics.py  rate_limit.py
backend/app/repositories/: README.md  __init__.py  alert_repository.py  base.py  base_repository.py  budget_repository.py  daily_cost_summary_repository.py  email_delivery_event_repository.py  invitation_repository.py  membership_repository.py  model_pricing_repository.py  organization_api_key_repository.py  organization_repository.py  password_reset_token_repository.py  playground_execution_repository.py  project_repository.py  provider_connection_repository.py  provider_usage_summary_repository.py  session_repository.py  usage_collection_checkpoint_repository.py  usage_collection_run_repository.py  usage_cost_record_repository.py  usage_event_repository.py  usage_record_repository.py  user_repository.py  verification_token_repository.py
backend/app/schemas/: __init__.py  alerts.py  analytics.py  auth.py  budgets.py  dashboard.py  invitations.py  organization_api_keys.py  organizations.py  playground.py  pricing.py  projects.py  provider_connections.py  providers.py  rbac.py  usage.py  usage_ingestion.py
backend/app/security/: __init__.py  encryption.py  masking.py
backend/app/services/: api_key_auth_service.py  invitation_service.py  organization_api_key_service.py  playground_service.py  provider_credential_service.py  provider_health_service.py  provider_sync_service.py  usage_ingestion_service.py  usage_sync_scheduler.py
backend/app/usage/: __init__.py  background.py  normalizer.py  service.py  validator.py
backend/docs/alerts/: 01-architecture.md  02-rule-engine.md  03-notification-center.md  04-preferences.md  05-deduplication.md  06-suppression.md  07-provider-health.md  08-security.md  09-examples.md  10-troubleshooting.md
backend/docs/architecture/: ARCHITECTURE_CHANGELOG.md  Cost-Analytics-Architecture.md  Dashboard-API-Architecture.md  Provider-Framework.md  Provider-Integration.md
backend/docs/dbtools/: 01-overview.md  (+4 more)
backend/migrations/: alembic.ini  env.py
backend/scripts/: seed_demo.py  verify_migrations.py
backend/tests/: conftest.py  test_api_key_auth.py  test_api_keys.py  test_authz.py  test_config.py  test_ep03_5.py  test_ep04.py  test_ep05.py  test_ep06.py  test_ep07.py  test_ep08.py  test_ep09.py  test_ep10.py  test_ep12_1.py  test_ep14_1.py  test_ep19_1.py  test_ep19_3.py  test_ep19_4_ws_close_regression.py  test_ep21_2_register.py  test_ep21_3_onboarding.py  test_ep22_2_settings.py  test_ep22_encryption.py  test_ep22_provider_connections.py  test_ep22_provider_validator.py  test_ep23_3_usage_sync.py  test_ep23_4_scheduler.py  test_ep23_projects.py  test_ep24_1_analytics.py  test_ep24_2_budgets.py  test_ep24_3_provider_parity.py  test_ep24_4_1_auth_enforcement.py  test_ep24_4_email_auth.py  test_ep24_5_google_oauth.py  test_ep24_6_1_hotfix.py  test_ep24_6_invitations.py  test_ep24_authz_audit.py  test_ep25_1_personal_business.py  test_ep25_2_upgrade_and_audit.py  test_ep25_3_polish.py  test_ep25_3_webhooks.py  (+18 more)
monitoring-agent/: .gitignore  config.example.yaml  pyproject.toml
monitoring-agent/costorah_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  logging_setup.py  version.py
monitoring-agent/docs/: API_INTEGRATION.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  DOCKER.md  KUBERNETES.md  TROUBLESHOOTING.md
monitoring-agent/tests/: conftest.py
sdk/python/: .gitignore  LICENSE  README.md  pyproject.toml
(+739 files in other folders)
