[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifinops-api"
version = "0.1.0"
description = "AI FinOps — backend API service"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Validation & configuration
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    # Database — OLTP
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    # Cache / queue
    "redis[hiredis]>=5.1.0",
    # Structured logging
    "structlog>=24.4.0",
    # Authentication
    "PyJWT>=2.7.0",
    "argon2-cffi>=23.1.0",
    "email-validator>=2.2.0",
    # HTTP client (provider integrations)
    "httpx>=0.27.0",
    # Real-time metrics (EP-19.1)
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "anyio[trio]>=4.6.0",
    # Linting & formatting
    "black>=24.8.0",
    "ruff>=0.6.0",
    # Type checking
    "mypy>=1.11.0",
    "types-redis>=4.6.0",
    # Pre-commit
    "pre-commit>=3.8.0",
    # SQLAlchemy stubs
    "sqlalchemy[mypy]>=2.0.36",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py313"]

# ─── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "RUF", # Ruff-specific
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (allowed in tests)
    "B008",   # function calls in argument defaults (FastAPI pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]
"scripts/*" = ["T201", "S105"]
"examples/*" = ["T201", "ANN"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ─── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "structlog.*"]
ignore_missing_imports = true

# ─── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
markers = [
    "integration: marks tests that require live services (postgres, redis)",
    "unit: marks pure unit tests",
]

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "migrations/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 70
