[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "costorah-agent"
version = "0.1.0"
description = "COSTORAH Monitoring Agent — automatic AI usage collection and telemetry"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Async HTTP client (outbound to COSTORAH + provider usage APIs)
    "httpx>=0.27.0",
    # Local health/metrics HTTP server
    "aiohttp>=3.10.0",
    # Config validation
    "pydantic>=2.9.0",
    "PyYAML>=6.0.2",
    # Structured logging
    "structlog>=24.4.0",
    # At-rest API key encryption
    "cryptography>=43.0.0",
    # CLI
    "click>=8.1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12",
]

[project.scripts]
costorah-agent = "costorah_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["costorah_agent*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "ANN", "S", "T20", "RUF"]
ignore = [
    "ANN101",
    "ANN102",
    "S101",
    "ANN401", # Any is correct for heterogeneous per-provider raw payloads
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["costorah_agent"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["aiohttp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
