[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costorah"
version = "1.0.0"
description = "Official Python SDK for COSTORAH — AI usage/cost telemetry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "COSTORAH" }]
keywords = ["costorah", "ai", "llm", "observability", "finops", "telemetry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Homepage = "https://costorah.com"
Documentation = "https://github.com/muhammedimrans/ai-finops/tree/main/sdk/python"
Repository = "https://github.com/muhammedimrans/ai-finops"

[tool.hatch.build.targets.wheel]
packages = ["costorah"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
