[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costorah"
version = "1.0.0"
description = "Official Python SDK for COSTORAH — AI usage/cost telemetry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "COSTORAH" }]
keywords = ["costorah", "ai", "llm", "observability", "finops", "telemetry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
    # Provider SDKs — only needed to run costorah.instrumentation's test
    # suite against the real packages (via monkeypatching, no live API
    # calls). NOT required to import or use costorah.instrumentation
    # itself, which imports each provider package lazily inside its own
    # instrument() call. mistralai is pinned: 2.x's package layout moved
    # `Mistral`/`Chat` under a namespace-package structure incompatible
    # with the documented `from mistralai import Mistral` usage this
    # instrumentor (and Mistral's own docs) targets; 1.9.11 is the last
    # release with the stable, documented shape.
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=0.1",
    "mistralai==1.9.11",
    "cohere>=5.0",
    "boto3>=1.34",
    # Framework integration test suite (costorah.integrations.*) — not
    # required to import/use costorah.integrations.fastapi itself, which
    # raises a clear ImportError if fastapi/starlette isn't installed.
    "fastapi>=0.100",
]

[project.urls]
Homepage = "https://costorah.com"
Documentation = "https://github.com/muhammedimrans/ai-finops/tree/main/sdk/python"
Repository = "https://github.com/muhammedimrans/ai-finops"

[tool.hatch.build.targets.wheel]
packages = ["costorah"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true

# Provider SDKs are optional, lazily-imported dependencies of
# costorah.instrumentation.* (never required to import/use the core
# package) — most don't ship type stubs, so mypy can't check calls into
# them beyond what our own code declares.
[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "google.genai.*", "mistralai.*", "cohere.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
