[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "costorah"
version = "1.0.0"
description = "Official Python SDK for COSTORAH — AI usage/cost telemetry"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "COSTORAH" }]
keywords = ["costorah", "ai", "llm", "observability", "finops", "telemetry"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25",
]

[project.scripts]
costorah = "costorah.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "mypy",
    # Provider SDKs — only needed to run costorah.instrumentation's test
    # suite against the real packages (via monkeypatching, no live API
    # calls). NOT required to import or use costorah.instrumentation
    # itself, which imports each provider package lazily inside its own
    # instrument() call. mistralai is pinned: 2.x's package layout moved
    # `Mistral`/`Chat` under a namespace-package structure incompatible
    # with the documented `from mistralai import Mistral` usage this
    # instrumentor (and Mistral's own docs) targets; 1.9.11 is the last
    # release with the stable, documented shape.
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=0.1",
    "mistralai==1.9.11",
    "cohere>=5.0",
    "boto3>=1.34",
    # Framework integration test suite (costorah.integrations.*) — not
    # required to import/use costorah.integrations.fastapi itself, which
    # raises a clear ImportError if fastapi/starlette isn't installed.
    "fastapi>=0.100",
    "flask>=2.3",
    "django>=4.2",
    "celery>=5.3",
    # AI framework integration test suite (costorah.instrumentation.langchain,
    # .crewai, EP-18.7) — not required to import/use those instrumentors,
    # which raise a clear ImportError if the target package isn't installed.
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "crewai>=0.80",
    "mcp>=1.0",
    # Transitive dependency of crewai's chromadb/onnxruntime/pyarrow chain.
    # Pinned (not left floating) because pip resolves a different numpy
    # version per Python interpreter — 2.2.6 on 3.10, 2.5.0 on 3.12 as of
    # this writing — and 2.3+'s bundled .pyi stubs use a `type` statement
    # that is 3.12-only syntax, which fails to even parse under this
    # project's `python_version = "3.10"` mypy target (see the numpy
    # override below): a hard parse error, not a missing-imports warning,
    # so `ignore_errors` can't rescue it. Pinning keeps both matrix legs
    # (3.10 and 3.12) resolving the identical, mypy-parseable numpy build.
    "numpy==2.2.6",
]

[project.urls]
Homepage = "https://costorah.com"
Documentation = "https://github.com/muhammedimrans/ai-finops/tree/main/sdk/python"
Repository = "https://github.com/muhammedimrans/ai-finops"

[tool.hatch.build.targets.wheel]
packages = ["costorah"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]
ignore = ["ANN401"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_reexport = true

# Provider SDKs are optional, lazily-imported dependencies of
# costorah.instrumentation.* (never required to import/use the core
# package) — most don't ship type stubs, so mypy can't check calls into
# them beyond what our own code declares.
[[tool.mypy.overrides]]
module = ["openai.*", "anthropic.*", "google.genai.*", "mistralai.*", "cohere.*", "boto3.*", "botocore.*"]
ignore_missing_imports = true

# Web/task-queue framework integrations (costorah.integrations.*, EP-18.5)
# are, like the provider SDKs above, optional lazily-imported
# dependencies never required to import/use costorah's core package.
# None ship type stubs in this project's dependency set (django-stubs /
# celery-stubs are not installed) — the untyped-import waiver mirrors
# the provider SDK override above, not a statement that these libraries
# are unimportant to type-check.
[[tool.mypy.overrides]]
module = ["flask.*", "django.*", "celery.*", "kombu.*", "billiard.*", "asgiref.*"]
ignore_missing_imports = true

# AI framework SDKs (costorah.instrumentation.langchain/.crewai, EP-18.7)
# are, like the provider SDKs above, optional lazily-imported dependencies
# never required to import/use costorah's core package. langchain-core ships
# its own py.typed stubs but pulls in untyped/incompatible transitive
# dependencies (e.g. numpy's 3.12-only stub syntax, via crewai's chromadb/
# onnxruntime/pyarrow chain) that mypy cannot parse under this project's
# python_version target — the waiver covers those transitive stub failures,
# not costorah's own code.
[[tool.mypy.overrides]]
module = ["langchain_core.*", "langchain_openai.*", "crewai.*", "mcp.*"]
ignore_missing_imports = true
follow_imports = "skip"

# numpy's own .pyi stubs (pulled in transitively via crewai's chromadb/
# onnxruntime/pyarrow chain) use Python 3.12-only `type` statement syntax,
# which fails to parse entirely under this project's python_version = "3.10"
# target — a hard syntax error, not a missing-imports warning, so it must be
# silenced with ignore_errors rather than ignore_missing_imports.
[[tool.mypy.overrides]]
module = ["numpy.*", "numpy"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
